# bitproto

./: .gitignore  .readthedocs.yaml  LICENSE-BSD3  MANIFEST.in  Makefile  README.md  README.rst  bitproto.py  changes.rst  license-bsd3.rst  setup.py
.github/: FUNDING.yml
.github/workflows/: bench.yml  ci.yml
benchmark/: Makefile  README.rst  drone.bitproto
benchmark/C/: .gitignore  Makefile
benchmark/bench-on-os/: .gitignore  Makefile
benchmark/bench-on-os/C/: Makefile  bench.c
benchmark/bench-on-os/Go/: Makefile  go.mod
benchmark/stm32/: Makefile  README.rst  drone.bitproto
benchmark/stm32/bpbench/: .gitignore  Makefile  STM32F103ZETx_FLASH.ld  bpbench.ioc
benchmark/unix/: Makefile  README.rst  drone.bitproto
benchmark/unix/Go/: Makefile  main.go
benchmark/unix/Python/: .gitignore  main.py
bitproto/: __init__.py  __version__.py  _ast.py  ast.py  command.py  errors.py  generator.py  lexer.py  linter.py  options.py  parser.py  renderer.py  renderer_c.py  renderer_go.py  renderer_py.py  utils.py
bitproto/renderer/: __init__.py  block.py  formatter.py  renderer.py
bitproto/renderer/impls/: __init__.py
compiler/: .gitignore  MANIFEST.in  Makefile  distbin.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
compiler/bitproto/: __init__.py  _ast.py  _main.py  command.py  errors.py  grammars.py  lexer.py  lib.py  linter.py  options.py  parser.py  utils.py
compiler/bitproto/renderer/: __init__.py  block.py  formatter.py  renderer.py
compiler/bitproto/renderer/impls/: __init__.py
compiler/bitproto/renderer/impls/c/: __init__.py  formatter.py  renderer_c.py  renderer_h.py
compiler/bitproto/renderer/impls/go/: __init__.py  formatter.py  renderer.py
compiler/bitproto/renderer/impls/py/: __init__.py  formatter.py  renderer.py
docs/: Makefile  _pygments.py  c-guide.rst  changelog.rst  compiler.rst  conf.py  conf_zh.py  endianness.rst  extensibility.rst  faq.rst  go-guide.rst  index.rst  index1.md  language.rst  license.rst  options.rst  performance.rst  python-guide.rst  quickstart.rst  requirements.txt  style.rst
docs/_static/: custom.css
editors/language_server/: MANIFEST.in  Makefile  README.md  requirements.txt  setup.py
editors/language_server/bitproto_language_server/: __init__.py
editors/pycharm/: README.rst
editors/vim/: README.rst
editors/vim/ftdetect/: bitproto.vim
editors/vim/indent/: bitproto.vim
editors/vim/syntax/: bitproto.vim
editors/vscode/bitproto/: README.md  README.rst  language-configuration.json  package-lock.json  package.json
example/: Makefile  README.rst  example.bitproto
example/C/: .gitignore  Makefile  bench.c  example_bp.c  example_bp.h  main.c
example/C-optimization-mode/: Makefile  example_bp.c  example_bp.h  main.c
example/CPP/: Makefile  example_bp.c  example_bp.h  gitignore  main.cpp
example/CPP-optimization-mode/: Makefile  example_bp.c  example_bp.h  main.cpp
example/Go/: go.mod  main.go
example/Go-optimization-mode/: go.mod  main.go
example/Go-optimization-mode/gen-bp/: example_bp.go
example/Go/gen-bp/: example_bp.go
example/Python/: example_bp.py  main.py
example/gen-c/: example_bp.c  example_bp.h
example/gen-go/: example_bp.go
example/gen-py/: example_bp.py
lib/c/: .clang-format  Makefile  bitproto.c  bitproto.h
lib/go/: Makefile  bitproto.go  go.mod
lib/py/: MANIFEST.in  Makefile  bitproto_lib.py  pyproject.toml  requirements_dev.txt  setup.py
lib/py/bitprotolib/: bp.py
test1/: base.bitproto  base_bp.c  base_bp.h  test.bitproto  test_bp.c  test_bp.h
tests/: Makefile  requirements_tests.txt
tests/test_compiler/: test_ast.py  test_formatter.py  test_linter.py  test_parser.py  test_util.py
tests/test_compiler/linter-cases/: alias_naming_style.bitproto  constant_naming_style.bitproto  definition_indent.bitproto  enum_contains_0.bitproto  enum_field_naming_style.bitproto  enum_naming_style.bitproto  message_field_naming_style.bitproto  message_naming_style.bitproto
tests/test_compiler/parser-cases/: _2d_array.bitproto  _2d_array_e.bitproto  alias_named_definition_1.bitproto  alias_named_definition_2.bitproto  array_cap_constraint.bitproto  array_of_message.bitproto  color.bitproto  constants.bitproto  cycle_import.bitproto  duplicate_definition_1.bitproto  duplicate_definition_2.bitproto  duplicate_definition_3.bitproto  duplicate_definition_4.bitproto  duplicate_definition_5.bitproto  duplicate_definition_6.bitproto  duplicate_definition_7.bitproto  duplicate_enum_field_value.bitproto  duplicate_message_field_number.bitproto  empty_message.bitproto  enum_size_constraint.bitproto  escaping_char.bitproto  extensible.bitproto  hex_value.bitproto  import_.bitproto  message_field_name_keyword.bitproto  message_field_number_constraint.bitproto  message_size_constraint.bitproto  message_size_constraint_by_option.bitproto  nested_enum.bitproto  nested_import.bitproto  nested_message.bitproto  option_.bitproto  option_not_supported.bitproto  option_reference_constants.bitproto  option_reference_imported_constants.bitproto  (+16 more)
tests/test_encoding/: test_encoding.py  test_endian.py
(+118 files in other folders)
