[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitproto"
version = "1.3.0"
description = "bit level data interchange format."
authors = [
    {name = "Chao Wang", email = "hit9@icloud.com"},
]
urls = {Homepage = "https://github.com/hit9/bitproto"}
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
requires-python = ">=3.7"
dependencies = [
    "ply>=3.11",
    "typing-extensions>=3.6.0",
]


[project.scripts]
bitproto = "bitproto._main:run_bitproto"



[tool.isort]
profile = "black"
combine_as_imports = true
