[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitprotolib"
version = "1.0.1"
description = "bitproto encoding and decoding library for generated python files."
authors = [
    {name = "Chao Wang", email = "hit9@icloud.com"},
]
urls = {Homepage = "https://github.com/hit9/bitproto"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.hatch.build.targets.sdist]
only-include = [
    "bitprotolib/",
    "pyproject.toml",
    "MANIFEST.in",
    "Makefile",
]
